# cctop

./: .gitignore  .swiftlint.yml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SPEC.md  appcast.xml
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/: release.yml
.github/workflows/: ci.yml  release.yml
.xcodebuildmcp/: config.yaml
assets/: tray-icon-attention.rgba  tray-icon.rgba
docs/: demo.tape  design-b-implementation-plan.md  homebrew-cask.rb  release-checklist.md
docs/plans/: 2026-01-26-cctop-implementation.md  2026-02-02-menubar-redesign.md  2026-02-08-swift-menubar-rewrite.md  cctop-level-up.md  egui-popup.md  menubar-app.md
menubar/CctopMenubar/: AppDelegate.swift  CctopApp.swift  FloatingPanel.swift  Info.plist
menubar/CctopMenubar.xcodeproj/: project.pbxproj
menubar/CctopMenubar/Hook/: HookHandler.swift  HookInput.swift  HookLogger.swift  HookMain.swift  SessionNameLookup.swift
menubar/CctopMenubar/Models/: AppSettings.swift  Color+Theme.swift  Config.swift  EditorKind.swift  HookEvent.swift  HostApp.swift  RecentProject+Mock.swift  RecentProject.swift  Session+Mock.swift  Session.swift  SessionStatus.swift
menubar/CctopMenubar/Services/: CompactModeController.swift  FocusTerminal.swift  HistoryManager.swift  InstallOrigin.swift  JumpModeController.swift  PanelCoordinator.swift  PluginManager.swift  RefocusController.swift  SessionManager.swift  SparkleUpdater.swift  UpdateChecker.swift
menubar/CctopMenubar/Views/: AboutView.swift  EmptyStateView.swift  HeaderView.swift  OpenCodeBanner.swift  (+8 more)
menubar/CctopMenubarTests/: AppSettingsTests.swift  CompactModeControllerTests.swift  CompactModeScenarioTests.swift  FocusTerminalTests.swift  ForkSessionTests.swift  HistoryManagerTests.swift  HookEventTests.swift  JumpModeControllerTests.swift  PanelCoordinatorTests.swift  PanelToggleTests.swift  QASnapshotTests.swift  RefocusControllerTests.swift  SessionNameLookupTests.swift  SessionStatusTests.swift  SessionTests.swift  SnapshotTests.swift  WorkspaceFileTests.swift
packaging/: homebrew-cask.rb
plugins/opencode/: package.json  plugin.js
raycast/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
raycast/src/: actions.ts  jump-to-active.tsx  menu-bar-status.tsx  sessions.ts  show-sessions.tsx  status-ui.ts  types.ts
scripts/: bump-version.sh  bundle-macos.sh  clean-stale-sessions.sh  create-dmg.sh  demo-cleanup.sh  demo-setup.sh  download-stats.sh  generate-appcast.sh  generate-state-diagram.sh  sign-and-notarize.sh
src/: config.rs  focus.rs  git.rs  lib.rs  main.rs  session.rs  tui.rs  watcher.rs
src/menubar/: app.rs  menu.rs  mod.rs  popup.rs  popup_state.rs  renderer.rs  snapshot.rs
tests/: hook_e2e.rs  session_file_io.rs
(+5 files in other folders)
