[package]
name = "cctop"
version = "0.1.0"
edition = "2021"
description = "TUI for monitoring Claude Code sessions across workspaces"
license = "MIT"
repository = "https://github.com/st0012/cctop"
homepage = "https://github.com/st0012/cctop"
readme = "README.md"
keywords = ["cli", "tui", "claude", "monitoring", "terminal"]
categories = ["command-line-utilities"]
authors = ["Stan Lo <stan001212@gmail.com>"]

[[bin]]
name = "cctop"
path = "src/main.rs"

[[bin]]
name = "cctop-hook"
path = "src/bin/cctop_hook.rs"

[[bin]]
name = "cctop-menubar"
path = "src/bin/cctop_menubar.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"
notify = "7.0"

[target.'cfg(target_os = "macos")'.dependencies]
tray-icon = "0.19"
tao = "0.30"
egui = "0.29"
egui-wgpu = "0.29"
wgpu = "22.0"
raw-window-handle = "0.6"
pollster = "0.4"

[dev-dependencies]
tempfile = "3.10"
