[package]
name = "cctop"
version = "0.2.0"
edition = "2021"
description = "Monitor Claude Code sessions across workspaces — menubar app and TUI"
license = "MIT"
repository = "https://github.com/st0012/cctop"
homepage = "https://github.com/st0012/cctop"
readme = "README.md"
keywords = ["cli", "tui", "claude", "monitoring", "terminal"]
categories = ["command-line-utilities"]
authors = ["Stan Lo <stan001212@gmail.com>"]

[[bin]]
name = "cctop"
path = "src/main.rs"

[[bin]]
name = "cctop-hook"
path = "src/bin/cctop_hook.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"
notify = "7.0"

[dev-dependencies]
tempfile = "3.10"
